Added Authentication Strategies

--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -5,6 +5,8 @@ services:
       dockerfile: apps/nestjs-microservice/Dockerfile
       target: development
     command: npm run start:dev
+    env_file:
+      - ./apps/nestjs-microservice/.env
     ports:
       - '3000:3000'
     volumes:
@@ -15,7 +17,11 @@ services:
       dockerfile: apps/auth/Dockerfile
       target: development
     command: npm run start:dev auth
+    env_file:
+      - apps/auth/.env
     ports:
       - '3001:3001'
+    volumes:
+      - .:/usr/src/app
   mongo:
     image: mongo
